// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Onboarding reducer Onboarding reducer with one edit building should return the edited building 1`] = `
Object {
  "address": "",
  "amenities": Object {
    "hasLifter": Object {
      "checked": false,
      "desc": "Lifert",
    },
    "hasSecurity": Object {
      "checked": false,
      "desc": "Security",
    },
    "none": Object {
      "checked": false,
      "desc": "none",
    },
  },
  "buildingId": undefined,
  "city": "",
  "country": "",
  "defaultAmenities": Object {
    "hasGym": Object {
      "checked": true,
      "desc": "hasGym",
    },
  },
  "description": "",
  "district": "",
  "docs": Array [],
  "images": Array [],
  "isNew": undefined,
  "isPublishing": false,
  "latLng": undefined,
  "location": "",
  "name": "",
  "postCode": "",
  "spaceCount": 1,
  "spaces": Object {
    "0": Object {
      "availabilityFixed": 2020-01-01T00:00:00.000Z,
      "fitout": Array [],
      "fixedDesks": Object {
        "availableFrom": 2020-01-01T00:00:00.000Z,
        "currencyCode": "NOK",
        "desks": 0,
        "frequency": "Monthly",
        "minLease": 0,
        "price": 0,
      },
      "floorPlan": Array [],
      "hotDesks": Object {
        "availableFrom": 2020-01-01T00:00:00.000Z,
        "currencyCode": "NOK",
        "desks": 0,
        "frequency": "Monthly",
        "minLease": 0,
        "price": 0,
      },
      "id": "0",
      "images": Array [],
      "months": undefined,
      "servicedOffices": Array [],
      "spaceDescription": "",
      "spaceFloor": undefined,
      "spaceFloored": "",
      "spaceHighlights": "",
      "spaceMatterPort": "",
      "spaceName": "",
      "spaceRent": undefined,
      "spaceServices": undefined,
      "spaceServicesNotNegotiable": false,
      "spaceSize": undefined,
      "spaceSizeCommon": undefined,
      "status": 0,
      "type": "",
      "use": "OFFICE",
    },
  },
  "subdistrict": Object {
    "id": 0,
    "name": "",
  },
}
`;

exports[`Onboarding reducer Onboarding reducer with one edit building should return the edited building 2`] = `
Object {
  "address": "Bryggegata, Oslo, Noruega",
  "amenities": Object {
    "hasGym": Object {
      "checked": true,
      "desc": "hasGym",
    },
    "hasReception-Manned": Object {
      "checked": true,
      "desc": "hasReception-Manned",
    },
  },
  "buildingId": "SS_BUILDING_325",
  "city": "Oslo",
  "country": "Norway",
  "defaultAmenities": Object {
    "hasGym": Object {
      "checked": true,
      "desc": "hasGym",
    },
  },
  "description": "building description",
  "district": "",
  "docs": Array [],
  "images": Array [],
  "isNew": false,
  "isPublishing": false,
  "latLng": Object {
    "lat": 59.91041,
    "lng": 0,
  },
  "location": "",
  "name": "building headline",
  "postCode": "28004",
  "spaceCount": 0,
  "spaces": Object {},
  "subdistrict": Object {
    "id": 0,
    "name": "",
  },
  "uploadedDocs": Array [],
  "uploadedImages": Array [
    Object {
      "Common.ImageCaption": "11 Strand 1_Photo_1_small.jpg",
      "Common.ImageResources": Array [
        Object {
          "Common.Breakpoint": "original",
          "Common.Image.Height": 426,
          "Common.Image.Width": 640,
          "Common.Resource.Uri": "/resources/fileassets/SS_BUILDING_325/5cd79f56/11%20Strand%201_Photo_1_small.jpg",
          "Source.Uri": "https://uatlistingssearchcbreeuw.blob.core.windows.net/fileassets/SS_BUILDING_325/5cd79f56/11%20Strand%201_Photo_1_small.jpg",
        },
        Object {
          "Common.Breakpoint": "small",
          "Common.Image.Height": 426,
          "Common.Image.Width": 640,
          "Common.Resource.Uri": "/resources/fileassets/SS_BUILDING_325/5cd79f56/11%20Strand%201_Photo_1_small_Photo_1_small.jpg",
          "Source.Uri": "https://uatlistingssearchcbreeuw.blob.core.windows.net/fileassets/SS_BUILDING_325/5cd79f56/11%20Strand%201_Photo_1_small.jpg",
        },
        Object {
          "Common.Breakpoint": "medium",
          "Common.Image.Height": 852,
          "Common.Image.Width": 1280,
          "Common.Resource.Uri": "/resources/fileassets/SS_BUILDING_325/5cd79f56/11%20Strand%201_Photo_1_small_Photo_1_medium.jpg",
          "Source.Uri": "https://uatlistingssearchcbreeuw.blob.core.windows.net/fileassets/SS_BUILDING_325/5cd79f56/11%20Strand%201_Photo_1_small.jpg",
        },
        Object {
          "Common.Breakpoint": "large",
          "Common.Image.Height": 1065,
          "Common.Image.Width": 1600,
          "Common.Resource.Uri": "/resources/fileassets/SS_BUILDING_325/5cd79f56/11%20Strand%201_Photo_1_small_Photo_1_large.jpg",
          "Source.Uri": "https://uatlistingssearchcbreeuw.blob.core.windows.net/fileassets/SS_BUILDING_325/5cd79f56/11%20Strand%201_Photo_1_small.jpg",
        },
      ],
    },
  ],
}
`;

exports[`Onboarding reducer Onboarding reducer with one edit space should return the edited space 1`] = `
Object {
  "address": "Bryggegata, Oslo, Noruega",
  "amenities": Object {
    "hasGym": Object {
      "checked": true,
      "desc": "hasGym",
    },
  },
  "buildingId": "SS_BUILDING_325",
  "city": "Oslo",
  "country": "Norway",
  "defaultAmenities": Object {
    "hasGym": Object {
      "checked": true,
      "desc": "hasGym",
    },
  },
  "description": "",
  "district": "",
  "docs": Array [],
  "images": Array [],
  "isNew": false,
  "isPublishing": false,
  "latLng": Object {
    "lat": 59.91041,
    "lng": 0,
  },
  "location": "",
  "name": "Space headline",
  "postCode": "28004",
  "spaceCount": 0,
  "spaces": Object {
    "SS_SPACE_326": Object {
      "address": "Bryggegata, Oslo, Noruega",
      "availabilityFixed": 2019-12-18T00:00:00.000Z,
      "fitout": Array [
        Object {
          "amount": 12,
          "description": "head desc fit1",
          "id": "fitout",
          "isCustom": false,
          "name": "head fitout 1",
        },
      ],
      "fixedDesks": undefined,
      "floorPlan": Array [],
      "hotDesks": undefined,
      "id": "SS_SPACE_326",
      "images": Array [],
      "months": undefined,
      "servicedOffices": Array [],
      "spaceDescription": "",
      "spaceFloor": 0,
      "spaceFloored": "",
      "spaceHighlights": "Space headline",
      "spaceMatterPort": "http://www.matterports.es",
      "spaceName": "Space headline",
      "spaceRent": 21,
      "spaceServices": 1200,
      "spaceServicesNotNegotiable": true,
      "spaceSize": 500,
      "spaceSizeCommon": 500,
      "status": 2,
      "type": "FIXED",
      "uploadedFloorPlans": Array [],
      "uploadedImages": Array [
        Object {
          "Common.ImageCaption": "40 Villiers Street.External_Photo_1_small.jpg",
          "Common.ImageResources": Array [
            Object {
              "Common.Breakpoint": "original",
              "Common.Image.Height": 492,
              "Common.Image.Width": 640,
              "Common.Resource.Uri": "/resources/fileassets/SS_SPACE_326/97117227/40%20Villiers%20Street.External_Photo_1_small.jpg",
              "Source.Uri": "https://uatlistingssearchcbreeuw.blob.core.windows.net/fileassets/SS_SPACE_326/97117227/40%20Villiers%20Street.External_Photo_1_small.jpg",
            },
            Object {
              "Common.Breakpoint": "small",
              "Common.Image.Height": 492,
              "Common.Image.Width": 640,
              "Common.Resource.Uri": "/resources/fileassets/SS_SPACE_326/97117227/40%20Villiers%20Street.External_Photo_1_small_Photo_1_small.jpg",
              "Source.Uri": "https://uatlistingssearchcbreeuw.blob.core.windows.net/fileassets/SS_SPACE_326/97117227/40%20Villiers%20Street.External_Photo_1_small.jpg",
            },
            Object {
              "Common.Breakpoint": "medium",
              "Common.Image.Height": 984,
              "Common.Image.Width": 1280,
              "Common.Resource.Uri": "/resources/fileassets/SS_SPACE_326/97117227/40%20Villiers%20Street.External_Photo_1_small_Photo_1_medium.jpg",
              "Source.Uri": "https://uatlistingssearchcbreeuw.blob.core.windows.net/fileassets/SS_SPACE_326/97117227/40%20Villiers%20Street.External_Photo_1_small.jpg",
            },
            Object {
              "Common.Breakpoint": "large",
              "Common.Image.Height": 1230,
              "Common.Image.Width": 1600,
              "Common.Resource.Uri": "/resources/fileassets/SS_SPACE_326/97117227/40%20Villiers%20Street.External_Photo_1_small_Photo_1_large.jpg",
              "Source.Uri": "https://uatlistingssearchcbreeuw.blob.core.windows.net/fileassets/SS_SPACE_326/97117227/40%20Villiers%20Street.External_Photo_1_small.jpg",
            },
          ],
        },
      ],
      "use": "OFFICE",
    },
  },
  "subdistrict": Object {
    "id": 0,
    "name": "",
  },
  "uploadedDocs": Array [],
  "uploadedImages": Array [
    Object {
      "Common.ImageCaption": "40 Villiers Street.External_Photo_1_small.jpg",
      "Common.ImageResources": Array [
        Object {
          "Common.Breakpoint": "original",
          "Common.Image.Height": 492,
          "Common.Image.Width": 640,
          "Common.Resource.Uri": "/resources/fileassets/SS_SPACE_326/97117227/40%20Villiers%20Street.External_Photo_1_small.jpg",
          "Source.Uri": "https://uatlistingssearchcbreeuw.blob.core.windows.net/fileassets/SS_SPACE_326/97117227/40%20Villiers%20Street.External_Photo_1_small.jpg",
        },
        Object {
          "Common.Breakpoint": "small",
          "Common.Image.Height": 492,
          "Common.Image.Width": 640,
          "Common.Resource.Uri": "/resources/fileassets/SS_SPACE_326/97117227/40%20Villiers%20Street.External_Photo_1_small_Photo_1_small.jpg",
          "Source.Uri": "https://uatlistingssearchcbreeuw.blob.core.windows.net/fileassets/SS_SPACE_326/97117227/40%20Villiers%20Street.External_Photo_1_small.jpg",
        },
        Object {
          "Common.Breakpoint": "medium",
          "Common.Image.Height": 984,
          "Common.Image.Width": 1280,
          "Common.Resource.Uri": "/resources/fileassets/SS_SPACE_326/97117227/40%20Villiers%20Street.External_Photo_1_small_Photo_1_medium.jpg",
          "Source.Uri": "https://uatlistingssearchcbreeuw.blob.core.windows.net/fileassets/SS_SPACE_326/97117227/40%20Villiers%20Street.External_Photo_1_small.jpg",
        },
        Object {
          "Common.Breakpoint": "large",
          "Common.Image.Height": 1230,
          "Common.Image.Width": 1600,
          "Common.Resource.Uri": "/resources/fileassets/SS_SPACE_326/97117227/40%20Villiers%20Street.External_Photo_1_small_Photo_1_large.jpg",
          "Source.Uri": "https://uatlistingssearchcbreeuw.blob.core.windows.net/fileassets/SS_SPACE_326/97117227/40%20Villiers%20Street.External_Photo_1_small.jpg",
        },
      ],
    },
  ],
}
`;

exports[`Onboarding reducer should return the initial state 1`] = `
Object {
  "address": "",
  "amenities": Object {},
  "buildingId": undefined,
  "city": "",
  "country": "",
  "description": "",
  "district": "",
  "docs": Array [],
  "images": Array [],
  "isNew": undefined,
  "isPublishing": false,
  "latLng": undefined,
  "location": "",
  "name": "name1",
  "postCode": "",
  "spaceCount": 1,
  "spaces": Object {
    "0": Object {
      "availabilityFixed": 2020-01-01T00:00:00.000Z,
      "fitout": Array [],
      "fixedDesks": Object {
        "availableFrom": 2020-01-01T00:00:00.000Z,
        "currencyCode": "NOK",
        "desks": 0,
        "frequency": "Monthly",
        "minLease": 0,
        "price": 0,
      },
      "floorPlan": Array [],
      "hotDesks": Object {
        "availableFrom": 2020-01-01T00:00:00.000Z,
        "currencyCode": "NOK",
        "desks": 0,
        "frequency": "Monthly",
        "minLease": 0,
        "price": 0,
      },
      "id": "0",
      "images": Array [],
      "months": undefined,
      "servicedOffices": Array [],
      "spaceDescription": "",
      "spaceFloor": undefined,
      "spaceFloored": "",
      "spaceHighlights": "",
      "spaceMatterPort": "",
      "spaceName": "",
      "spaceRent": undefined,
      "spaceServices": undefined,
      "spaceServicesNotNegotiable": false,
      "spaceSize": undefined,
      "spaceSizeCommon": undefined,
      "status": 0,
      "type": "",
      "use": "OFFICE",
    },
  },
  "subdistrict": Object {
    "id": 0,
    "name": "",
  },
}
`;

exports[`Onboarding reducer should return the initial state 2`] = `
Object {
  "address": "",
  "amenities": Object {},
  "buildingId": undefined,
  "city": "",
  "country": "",
  "description": "desc1",
  "district": "",
  "docs": Array [],
  "images": Array [],
  "isNew": undefined,
  "isPublishing": false,
  "latLng": undefined,
  "location": "",
  "name": "name1",
  "postCode": "",
  "spaceCount": 1,
  "spaces": Object {
    "0": Object {
      "availabilityFixed": 2020-01-01T00:00:00.000Z,
      "fitout": Array [],
      "fixedDesks": Object {
        "availableFrom": 2020-01-01T00:00:00.000Z,
        "currencyCode": "NOK",
        "desks": 0,
        "frequency": "Monthly",
        "minLease": 0,
        "price": 0,
      },
      "floorPlan": Array [],
      "hotDesks": Object {
        "availableFrom": 2020-01-01T00:00:00.000Z,
        "currencyCode": "NOK",
        "desks": 0,
        "frequency": "Monthly",
        "minLease": 0,
        "price": 0,
      },
      "id": "0",
      "images": Array [],
      "months": undefined,
      "servicedOffices": Array [],
      "spaceDescription": "",
      "spaceFloor": undefined,
      "spaceFloored": "",
      "spaceHighlights": "",
      "spaceMatterPort": "",
      "spaceName": "",
      "spaceRent": undefined,
      "spaceServices": undefined,
      "spaceServicesNotNegotiable": false,
      "spaceSize": undefined,
      "spaceSizeCommon": undefined,
      "status": 0,
      "type": "",
      "use": "OFFICE",
    },
  },
  "subdistrict": Object {
    "id": 0,
    "name": "",
  },
}
`;

exports[`Onboarding reducer should return the initial state 3`] = `
Object {
  "address": "addres1",
  "amenities": Object {
    "hasLifter": Object {
      "checked": true,
      "desc": "Lifert",
    },
    "hasSecurity": Object {
      "checked": false,
      "desc": "Security",
    },
    "none": Object {
      "checked": true,
      "desc": "none",
    },
  },
  "buildingId": "id1",
  "city": "Olso",
  "country": "NO",
  "defaultAmenities": Object {
    "hasGym": Object {
      "checked": true,
      "desc": "hasGym",
    },
  },
  "description": "descr1",
  "district": "",
  "docs": Array [],
  "error": "Error1",
  "images": Array [],
  "isNew": true,
  "isPublishing": true,
  "latLng": Object {
    "lat": 0,
    "lng": 0,
  },
  "location": "Olso",
  "name": "name1",
  "postCode": "Olso",
  "spaceCount": 2,
  "spaces": Object {
    "0": Object {
      "availabilityFixed": 2020-01-01T00:00:00.000Z,
      "fitout": Array [],
      "fixedDesks": Object {
        "availableFrom": 2020-01-01T00:00:00.000Z,
        "desks": 20,
        "minLease": 2,
        "price": 2000,
      },
      "floorPlan": Array [],
      "hotDesks": Object {
        "availableFrom": 2020-01-01T00:00:00.000Z,
        "desks": 20,
        "minLease": 2,
        "price": 2000,
      },
      "id": "0",
      "images": Array [],
      "months": 1,
      "servicedOffices": Object {
        "availableFrom": 2020-01-01T00:00:00.000Z,
        "desks": 20,
        "minLease": 2,
        "price": 2000,
      },
      "spaceDescription": "space1",
      "spaceFloor": 1,
      "spaceFloored": "data",
      "spaceHighlights": "data",
      "spaceMatterPort": "data",
      "spaceName": "space1",
      "spaceRent": 5000,
      "spaceServices": 500,
      "spaceServicesNotNegotiable": true,
      "spaceSize": 500,
      "spaceSizeCommon": 550,
      "status": 0,
      "type": "FLEX",
      "uploadedFloorPlans": Array [],
      "uploadedImages": Array [],
      "use": "OFFICE",
    },
    "1": Object {
      "availabilityFixed": 2020-01-01T00:00:00.000Z,
      "fitout": Array [],
      "fixedDesks": Object {
        "availableFrom": 2020-01-01T00:00:00.000Z,
        "currencyCode": "NOK",
        "desks": 0,
        "frequency": "Monthly",
        "minLease": 0,
        "price": 0,
      },
      "floorPlan": Array [],
      "hotDesks": Object {
        "availableFrom": 2020-01-01T00:00:00.000Z,
        "currencyCode": "NOK",
        "desks": 0,
        "frequency": "Monthly",
        "minLease": 0,
        "price": 0,
      },
      "id": "1",
      "images": Array [],
      "months": 1,
      "servicedOffices": Array [],
      "spaceDescription": "space1",
      "spaceFloor": 1,
      "spaceFloored": "data",
      "spaceHighlights": "data",
      "spaceMatterPort": "data",
      "spaceName": "space1",
      "spaceRent": 5000,
      "spaceServices": 500,
      "spaceServicesNotNegotiable": false,
      "spaceSize": 500,
      "spaceSizeCommon": 550,
      "status": 0,
      "type": "FLEX",
      "use": "OFFICE",
    },
  },
  "subdistrict": Object {
    "id": 0,
    "name": "",
  },
  "uploadedDocs": Array [],
  "uploadedImages": Array [],
}
`;

exports[`Onboarding reducer should return the initial state 4`] = `
Object {
  "address": "addres1",
  "amenities": Object {
    "hasLifter": Object {
      "checked": true,
      "desc": "Lifert",
    },
    "hasSecurity": Object {
      "checked": false,
      "desc": "Security",
    },
    "none": Object {
      "checked": true,
      "desc": "none",
    },
  },
  "buildingId": "id1",
  "city": "Olso",
  "country": "NO",
  "defaultAmenities": Object {
    "hasGym": Object {
      "checked": true,
      "desc": "hasGym",
    },
  },
  "description": "descr1",
  "district": "",
  "docs": Array [],
  "error": "Error1",
  "images": Array [],
  "isNew": true,
  "isPublishing": true,
  "latLng": Object {
    "lat": 0,
    "lng": 0,
  },
  "location": "Olso",
  "name": "name1",
  "postCode": "Olso",
  "spaceCount": 3,
  "spaces": Object {
    "0": Object {
      "availabilityFixed": 2020-01-01T00:00:00.000Z,
      "fitout": Array [],
      "fixedDesks": Object {
        "availableFrom": 2020-01-01T00:00:00.000Z,
        "currencyCode": "NOK",
        "desks": 0,
        "frequency": "Monthly",
        "minLease": 0,
        "price": 0,
      },
      "floorPlan": Array [],
      "hotDesks": Object {
        "availableFrom": 2020-01-01T00:00:00.000Z,
        "currencyCode": "NOK",
        "desks": 0,
        "frequency": "Monthly",
        "minLease": 0,
        "price": 0,
      },
      "id": "0",
      "images": Array [],
      "months": undefined,
      "servicedOffices": Array [],
      "spaceDescription": "",
      "spaceFloor": undefined,
      "spaceFloored": "",
      "spaceHighlights": "",
      "spaceMatterPort": "",
      "spaceName": "",
      "spaceRent": undefined,
      "spaceServices": undefined,
      "spaceServicesNotNegotiable": false,
      "spaceSize": undefined,
      "spaceSizeCommon": undefined,
      "status": 0,
      "type": "",
      "use": "OFFICE",
    },
    "2": Object {
      "availabilityFixed": 2020-01-01T00:00:00.000Z,
      "fitout": Array [],
      "fixedDesks": Object {
        "availableFrom": 2020-01-01T00:00:00.000Z,
        "currencyCode": "NOK",
        "desks": 0,
        "frequency": "Monthly",
        "minLease": 0,
        "price": 0,
      },
      "floorPlan": Array [],
      "hotDesks": Object {
        "availableFrom": 2020-01-01T00:00:00.000Z,
        "currencyCode": "NOK",
        "desks": 0,
        "frequency": "Monthly",
        "minLease": 0,
        "price": 0,
      },
      "id": "2",
      "images": Array [],
      "months": undefined,
      "servicedOffices": Array [],
      "spaceDescription": "",
      "spaceFloor": undefined,
      "spaceFloored": "",
      "spaceHighlights": "",
      "spaceMatterPort": "",
      "spaceName": "",
      "spaceRent": undefined,
      "spaceServices": undefined,
      "spaceServicesNotNegotiable": false,
      "spaceSize": undefined,
      "spaceSizeCommon": undefined,
      "status": 0,
      "type": "",
      "use": "OFFICE",
    },
  },
  "subdistrict": Object {
    "id": 0,
    "name": "",
  },
  "uploadedDocs": Array [],
  "uploadedImages": Array [],
}
`;

exports[`Onboarding reducer should return the initial state 5`] = `
Object {
  "address": "addres1",
  "amenities": Object {
    "hasLifter": Object {
      "checked": true,
      "desc": "Lifert",
    },
    "hasSecurity": Object {
      "checked": false,
      "desc": "Security",
    },
    "none": Object {
      "checked": true,
      "desc": "none",
    },
  },
  "buildingId": "id1",
  "city": "Olso",
  "country": "NO",
  "defaultAmenities": Object {
    "hasGym": Object {
      "checked": true,
      "desc": "hasGym",
    },
  },
  "description": "descr1",
  "district": "",
  "docs": Array [],
  "error": "Error1",
  "images": Array [],
  "isNew": true,
  "isPublishing": true,
  "latLng": Object {
    "lat": 0,
    "lng": 0,
  },
  "location": "Olso",
  "name": "name1",
  "postCode": "Olso",
  "spaceCount": 3,
  "spaces": Object {
    "2": Object {
      "availabilityFixed": 2020-01-01T00:00:00.000Z,
      "fitout": Array [],
      "fixedDesks": Object {
        "availableFrom": 2020-01-01T00:00:00.000Z,
        "currencyCode": "NOK",
        "desks": 0,
        "frequency": "Monthly",
        "minLease": 0,
        "price": 0,
      },
      "floorPlan": Array [],
      "hotDesks": Object {
        "availableFrom": 2020-01-01T00:00:00.000Z,
        "currencyCode": "NOK",
        "desks": 0,
        "frequency": "Monthly",
        "minLease": 0,
        "price": 0,
      },
      "id": "2",
      "images": Array [],
      "months": undefined,
      "servicedOffices": Array [],
      "spaceDescription": "",
      "spaceFloor": undefined,
      "spaceFloored": "",
      "spaceHighlights": "",
      "spaceMatterPort": "",
      "spaceName": "",
      "spaceRent": undefined,
      "spaceServices": undefined,
      "spaceServicesNotNegotiable": false,
      "spaceSize": undefined,
      "spaceSizeCommon": undefined,
      "status": 0,
      "type": "",
      "use": "OFFICE",
    },
  },
  "subdistrict": Object {
    "id": 0,
    "name": "",
  },
  "uploadedDocs": Array [],
  "uploadedImages": Array [],
}
`;
